# Kxshare

./: .dockerignore  .env  .env.example  .replit  Dockerfile  analytics.py  database.json  docker-compose.yml  main.py  ping_results.csv  pyproject.toml  readme.md  replit.nix  requirements.txt  sitemap.xml
.github/workflows/: hourly-dashboard.yml  keep-alive.yml  keep-render-site-awake.yml  keep-render-site-awake.yml_stop  kxAwake.yml  kxAwake.yml_stop
static/: robots.txt  sitemap.xml
templates/: expired.html  home.html  landing.html  password.html  privacy.html  success.html  view.html
