[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "cryptography>=44.0.2",
    "flask-caching>=2.3.1",
    "flask>=3.1.0",
    "markdown>=3.7",
    "pillow>=11.1.0",
    "python-dotenv>=1.1.0",
    "qrcode>=8.1",
    "requests>=2.32.3",
    "tinydb>=4.8.2",
]
